--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "packages/*"
   ],
   "scripts": {
-    "docs":"yarn workspace doc-site run start"
+    "docs": "yarn workspace doc-site run start"
   },
   "license": "MIT",
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
-    "lerna": "^6.3.0"
+    "lerna": "^6.3.0",
+    "prettier": "^2.8.1"
   }
 }
