--- a/packages/jj-design/.prettierrc
+++ b/packages/jj-design/.prettierrc
@@ -1,4 +1,8 @@
 {
   "semi": true,
-  "singleQuote": true
+  "tabWidth": 2,
+  "printWidth": 100,
+  "singleQuote": true,
+  "trailingComma": "none",
+  "jsxBracketSameLine": true
 }
