--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,7 +17,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "@typescript-eslint"],
+  "plugins": ["react", "@typescript-eslint", "react-hooks"],
   "rules": {
     "semi": ["warn"],
     "react/jsx-max-props-per-line": [
@@ -25,6 +25,8 @@
       {
         "maximum": 1
       }
-    ]
+    ],
+    "prettier/prettier": "off",
+    "react-hooks/exhaustive-deps": "error"
   }
 }
