--- a/packages/doc-site/package.json
+++ b/packages/doc-site/package.json
@@ -2,16 +2,12 @@
   "name": "doc-site",
   "version": "0.0.1",
   "description": "jealh's 组件文档站",
-  "scripts": {
-    "start": "npm run dev",
-    "dev": "dumi dev",
-    "build": "dumi build",
-    "prepare": "husky install && dumi setup"
-  },
-  "authors": [
-    "jealh"
-  ],
   "license": "MIT",
+  "scripts": {
+    "build": "dumi build",
+    "dev": "dumi dev",
+    "start": "npm run dev"
+  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
@@ -27,7 +23,9 @@
     "@commitlint/config-conventional": "^17.1.0",
     "dumi": "^2.0.2",
     "husky": "^8.0.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
-  }
+    "lint-staged": "^13.0.3"
+  },
+  "authors": [
+    "jealh"
+  ]
 }
