fix: yarn install cmd

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
 
       - name: Install and Build
         run:
-          yarn install
+          yarn add
           yarn run build:docs
 
       - name: Build and deploy
