--- a/packages/jj-design/tsconfig.json
+++ b/packages/jj-design/tsconfig.json
@@ -2,6 +2,6 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "lib": ["es5", "dom"],
-    "declarationDir": "type"
+    "jsx": "react"
   }
 }
