--- a/packages/jj-scripts/package.json
+++ b/packages/jj-scripts/package.json
@@ -28,6 +28,7 @@
     "fs-extra": "^11.1.1",
     "gulp": "^4.0.2",
     "less-loader": "^11.1.0",
+    "node-typescript-compiler": "^3.0.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
@@ -35,6 +36,7 @@
     "webpack-cli": "^5.1.1"
   },
   "devDependencies": {
+    "@types/fs-extra": "^11.0.1",
     "progress-bar-webpack-plugin": "^2.1.0"
   }
 }
