--- a/packages/jj-scripts/package.json
+++ b/packages/jj-scripts/package.json
@@ -26,8 +26,13 @@
     "css-loader": "^6.7.4",
     "file-loader": "^6.2.0",
     "fs-extra": "^11.1.1",
+    "glob": "^10.2.6",
     "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-less": "^5.0.0",
+    "gulp-rename": "^2.0.0",
     "less-loader": "^11.1.0",
+    "merge-stream": "^2.0.0",
     "node-typescript-compiler": "^3.0.0",
     "style-loader": "^3.3.3",
     "ts-loader": "^9.4.2",
