--- a/packages/doc-site/package.json
+++ b/packages/doc-site/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "babel-plugin-import": "^1.13.6",
     "dumi": "^2.0.2",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3"
