--- a/packages/jj-design/tsconfig.json
+++ b/packages/jj-design/tsconfig.json
@@ -5,5 +5,6 @@
     "lib": ["es5", "dom"],
     "jsx": "react"
   },
+  "include": ["components/**/*.ts", "components/**/*.tsx"],
   "exclude": ["es"]
 }
