--- a/packages/jj-scripts/package.json
+++ b/packages/jj-scripts/package.json
@@ -31,6 +31,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-less": "^5.0.0",
     "gulp-rename": "^2.0.0",
+    "gulp-replace": "^1.1.4",
     "less-loader": "^11.1.0",
     "merge-stream": "^2.0.0",
     "node-typescript-compiler": "^3.0.0",
